MANVIR SANDBOX/src/objects/Revenue_Recognition__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Weighted__c</fullName>
        <formula>Amount__c  *  Opportunity_Probability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability__c</fullName>
        <formula>Opportunity__r.Probability</formula>
        <label>Opportunity Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Revenue Recognition</relationshipLabel>
        <relationshipName>Revenue_Recognition</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Date__c</fullName>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Type</label>
        <referenceTo>Revenue_Type__c</referenceTo>
        <relationshipLabel>Revenue Recognition</relationshipLabel>
        <relationshipName>Revenue_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Revenue Recognition</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Recognition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>